L4 spacing fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/sectionMenu/_sectionMenu.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/sectionMenu/_sectionMenu.scss
@@ -17,7 +17,7 @@
         }
         i.with-arrow.icon-up {
             &::before {
-                transform: rotate(270deg);
+                transform: rotate(-90deg);
             }
         }
     }
